NTP/SNMP aktiviert

--- a/www/index.html
+++ b/www/index.html
@@ -179,12 +179,12 @@
       <label class="color_picker" for="led_standby_checkbox">LED STANDBY</label>
       <br />
       <label class="switch">
-        <input type="checkbox" id="led_standby_checkbox" checked>
+        Temperatur aktuell
         <span class="slider"></span>
       </label>
     </div>
     <div class="linkarea">
-      <a href="/rest/config" target="_self">[ CONTROLLER CONFIG ]</a>
+      <a href="/rest/v1/current" target="_self">[ Aktuelle Werte ]</a>
     </div>
 
   </div>
