- gui zeigt an wenn daten nicht gefunden

--- a/www/index.html
+++ b/www/index.html
@@ -27,12 +27,13 @@
       </label>
       <canvas class="measure" id="humidy_chart"></canvas>
       <br />
+      <div class="stat" id="stat">
+      </div>
+      <br />
       <a id="twenty_four_hours">24 Stunden</a>
       <a id="seven_days">7 Tage</a>
       <a id="thirty_days">30 Tage</a>
     </div>
-  </div>
-  <div id="stat">
   </div>
 </body>
 
