--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
       <div class="stat" id="stat">
       </div>
       <br />
+      <a id="three_hours">3 Stunden</a>
       <a id="twenty_four_hours">24 Stunden</a>
       <a id="seven_days">7 Tage</a>
       <a id="thirty_days">30 Tage</a>
