- anzeige controllerspannung implementiert

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body onload="init_page()" id="current_temp_area">
-  <h1>Temperaturen</h1>
+  <h1>Temperaturen<span class="t_gauge" id="temp_gauge"></span></h1>
   <div class="complete" id="complete">
     <div class="workarea">
       <label id="temp_label">
