--- a/data/www/index.html
+++ b/data/www/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="default.css">
-  <script src="chart-4.0.1.umd.js.gz"></script>
-  <script src="app.js"></script>
+  <link rel="stylesheet" href="/www/default.css">
+  <script src="/www/chart-4.0.1.umd.js.gz"></script>
+  <script src="/www/app.js"></script>
   <title>Temperatur</title>
   <script>
   </script>
